# Hetzner-Server-Manager-Bot

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: pr_build.yml  push_build.yml  release_build.yml
src/db/: core.py
src/db/migrations/versions/: 20251221_server_access.py
src/db/models/: __init__.py  _access.py  _client.py  _user.py
src/handlers/: base.py  middlewares.py
src/handlers/clients/: create.py  info.py  menu.py  update.py
src/handlers/primary_ips/: create.py  info.py  menu.py  update.py
src/handlers/servers/: create.py  info.py  menu.py  update.py
src/handlers/snapshots/: create.py  info.py  menu.py  update.py
src/keys/: callback.py  manager.py
src/lang/: _button.py  _dialog.py
src/tasks/: traffic_alert.py
src/utils/: depends.py  euro.py  state.py
