[tool.ruff]
line-length = 128

[project]
name = "ServerManagerBot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.5"
dependencies = [
    "alembic>=1.16",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "dotenv>=0.9",
    "python-decouple>=3.8",
    "eiogram>=2.0",
    "hcloud>=2.5",
    "apscheduler>=3.11",
    "aiohttp>=3.13",
]
